--- a/_config.yml
+++ b/_config.yml
@@ -9,36 +9,39 @@
 #    target: _blank    是否跳出，省略则在当前页面打开
 menu:
   home:
-    text: 主页
+    text: Home
     url: /
   archives:
     url: /archives
   tags:
     url: /tags
+  categories:
+    url: /categories
+  about:
+    url: /about
   github:
-    url: https://github.com/yscoder
+    url: https://github.com/bestsonic
     target: _blank
   weibo:
-    url: http://www.weibo.com/ysweb
+    url: http://weibo.com/3264372631
     target: _blank
-  link:
-    text: 测试
-    url: /
 
-rss: /atom.xml
+rss: https://github.com/search?q=bestsonic&type=Users
 
 #你的头像url
 avatar: /img/logo.jpg
 
 # email
-email: 634206017@qq.com
+email: Bestsonic@sina.com
 
 # Content
 tags:
-  title: 标签
+  title: Tags
+categories:
+  title: Categories
 
 excerpt_link: more
-mathjax: false
+mathjax: true
 archive_yearly: true
 
 #是否开启分享
@@ -48,16 +51,16 @@ share: true
 hideMenu: true
 
 #是否开启toc
-#toc: false
+#toc: true
 toc:
   list_number: false  # 是否显示数字排序
 
 #站长统计，如要开启，输入CNZZ站点id，如 cnzz: 1255152447
-cnzz: false
+cnzz: 1259030806
 
 # Miscellaneous
-google_analytics: ''
-favicon: /favicon.ico
+google_analytics: 'UA-77412363-1'
+favicon: /img/favicon.ico
 
 # less
 less:
@@ -66,4 +69,4 @@ less:
 
 #是否开启多说评论，填写你在多说申请的项目名称 duoshuo: duoshuo-key
 #若使用disqus，请在博客config文件中填写disqus_shortname，并关闭多说评论
-duoshuo: ysblog
+duoshuo: bestsonic
